// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders all typography components with the expected spacing classes 1`] = `
.emotion-0 {
  display: block;
  margin-bottom: 1rem;
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  margin: 0;
}

<div
  class="Typography"
  data-test-id="cf-ui-text-container"
>
  <h1
    class="DisplayText DisplayText--default f36-margin-bottom--l"
    data-test-id="cf-ui-display-text"
  >
    My DisplayText
  </h1>
  <div
    class="emotion-0"
  >
    My Heading
  </div>
  <p
    class="Paragraph f36-margin-bottom--m"
    data-test-id="cf-ui-paragraph"
  >
    My Paragraph
  </p>
  <h3
    class="SectionHeading f36-margin-bottom--l"
    data-test-id="cf-ui-section-heading"
  >
    My SectionHeading
  </h3>
  <h2
    class="Subheading f36-margin-bottom--m"
    data-test-id="cf-ui-subheading"
  >
    My Subheading
  </h2>
</div>
`;

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  margin-bottom: 1rem;
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  margin: 0;
}

<div
  class="Typography"
  data-test-id="cf-ui-text-container"
>
  <div
    class="emotion-0"
  >
    My Heading
  </div>
  <p
    class="Paragraph f36-margin-bottom--m"
    data-test-id="cf-ui-paragraph"
  >
    My Paragraph
  </p>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  margin-bottom: 1rem;
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  margin: 0;
}

<div
  class="Typography my-extra-class"
  data-test-id="cf-ui-text-container"
>
  <div
    class="emotion-0"
  >
    My Heading
  </div>
  <p
    class="Paragraph f36-margin-bottom--m"
    data-test-id="cf-ui-paragraph"
  >
    My Paragraph
  </p>
</div>
`;
